src/styles/inputs.css
.inputFieldContainer {
  display: grid;
  grid-template-columns: 1fr auto auto;
  column-gap: 8px;
}
.innerInputFieldContainer {
  display: gap;
  grid-template-columns: 1fr auto;
}
.inputContainer {
  display: flex;
  align-items: stretch;
  flex-direction: column;
  gap: 8px;
}
textarea {
  overflow-y: auto;
  word-wrap: break-word;
  word-break: break-all;
  -ms-word-break: break-all;
  -ms-word-wrap: break-word;
  resize: vertical;
}
.inputComponent,
.textareaWrap {
  font-family: "TTCommonsProDemiBold";
  border: none;
  font-size: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
  background-color: #f3f3f3;
  border-radius: 16px;
  outline: none;
  resize: vertical;
  text-align: left;
  white-space: pre;
  display: grid;
}
.inputComponent:focus {
  background-color: #e3e3e3;
}
.textareaWrap {
  display: grid;
  padding-top: 0px;
  padding-left: 0px;
  padding-bottom: 0px;
  padding-right: 0px;
}
.textareaWrap::after {
  content: attr(data-replicated-value) " ";
  white-space: pre-wrap;
  visibility: hidden;
}
.textareaWrap > textarea {
  resize: none;
  overflow: hidden;
}
.textareaWrap > textarea,
.textareaWrap::after {
  padding: 0.5rem;
  font: inherit;
  grid-area: 1 / 1 / 2 / 2;
}
.emptyInput {
  background-color: #ffe0e0;
}

